nginx-ingress/ifconfig-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifconfig-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: ifconfig.inv.gov.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ifconfig
            port:
              number: 80
